        SS   tt   eeeeee  ll   ll   aaaaa  --  "An Atari 2600 VCS Emulator"
    SS  SS   tt   ee      ll   ll  aa  aa
     SSSS     ttt  eeeee llll llll  aaaaa

===========================================================================
                               Release History
===========================================================================

4.0 to 4.1: (xxx xx, 2014)

  * The UNIX configure script now supports newer versions of Hurd.
    Special thanks to Stephen Kitt for the patch.

-Have fun!


3.9.3 to 4.0: (July 1, 2014)

  * Ported Stella to SDL2, which brings many new features.  Among the
    largest improvements is native hardware acceleration support for
    Windows (Direct3D) and Linux/OSX (OpenGL).  It is also now possible
    to port Stella to iOS and Android devices using OpenGLES.
    Hardware acceleration is now required, which means up-to-date drivers
    are needed.  Software rendering is still present, but is somewhat
    unoptimized and unsupported going forward.

  * Fullscreen video modes now use the desktop resolution.  Switching
    to fullscreen and back to windowed mode no longer rearranges icons
    on your desktop.

  * TIA TV effects are now available in all video modes, since hardware
    acceleration is a requirement.

  * Added a much more detailed view of cart extended RAM to a new
    debugger tab.  Special thanks to SpiceWare for this implementation.

  * Added preliminary support for 'DASH' bankswitching scheme by A. Davie.

  * The AtariVox and SaveKey controllers now have the ability in the
    debugger to completely erase the virtual EEPROM data.

  * Added 'savesnap' debugger prompt command, and also associated
    context menu item to the debugger TIA output area.  This saves the
    current TIA image to a PNG file.

  * Added 'hidecursor' commandline option, which allows to completely
    disable showing the mouse cursor (useful on systems that don't have
    a mouse).
